syntax = "proto3";

import "EmployeeStatusEnum.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "gRPC.Server.Protos";
option go_package = "github.com/blackdatura/grpc.server/pb";

message Employee{
	int32 id = 1;
	int32 no = 2;
	string first_name = 3;
	string last_name = 4;
	//float salary = 5;

	MonthSalary month_salary = 6;
	EmployeeStatus status = 7;
	google.protobuf.Timestamp last_modified = 8;

	reserved 5;
	reserved "salary";
}

message MonthSalary{
	float basic = 1;
	float bonus = 2;
}

message GetByNoRequest{
	int32 no = 1;
}

message EmployeeRequest{
	Employee employee = 1;
}

message EmployeeResponse{
	Employee employee = 1;
}

message GetAllRequest{}

message AddPhotoRequest{
	bytes data = 1;
}

message AddPhotoResponse{
	bool isOK = 1;
}


service EmployeeService{
	rpc GetByNo(GetByNoRequest) returns (EmployeeResponse);
	rpc GetAll(GetAllRequest) returns (stream EmployeeResponse);
	rpc AddPhoto(stream AddPhotoRequest) returns (AddPhotoResponse);
	rpc Save(EmployeeRequest) returns (EmployeeResponse);
	rpc SaveAll(stream EmployeeRequest) returns (stream EmployeeResponse);
}